--- a/config.yaml
+++ b/config.yaml
@@ -8,22 +8,26 @@ filenames_to_auto_rename:
 
 model_base_names:
   flux1:
-    - flux1
     - flux
     - flux-1
     - flux_1
+    - flux.1 dev
+    - flux.1 d
   sdxl:
-    - sdxl
+    - SD XL
+    - sd xl 
+    - SDXL 1.0
     - sd-xl
     - sd_xl
     - stable-diffusion-xl
     - stablediffusionxl
   sd15:
-    - sd15
     - sd-15
     - sd_15
     - stable-diffusion-1.5
     - stablediffusion15
+  pony:
+    - PONY
 
 model_type_names:
   loras:
@@ -51,7 +55,6 @@ model_type_names:
     - u-net
   textualinversion:
     - textualinversion
-    - ti
     - embedding
     - embeddings
   hypernetwork:
